--- a/styles.css
+++ b/styles.css
@@ -157,5 +157,6 @@
       display: inline;
     }
   }
-  
-  
+
+  /* git config --global user.email "you@example.com"
+  git config --global user.name "Your Name" */
