--- a/styles.css
+++ b/styles.css
@@ -26,8 +26,8 @@ body {
 }
 
 .nav-name {
-  max-width: 250px;
-  margin-bottom: 30px;
+  width: 250px;
+  margin-bottom: 20px;
 }
 
 .container {
@@ -37,11 +37,10 @@ body {
 }
 
 .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   border-bottom: 2px solid #ffffff;
-  padding: 1rem 0;
+  display: flex;                
+  justify-content: center;      
+  align-items: center;  
 }
 
 /* .nav-links {
@@ -112,8 +111,9 @@ body {
 /* Media Queries for Responsive Design */
 @media (max-width: 768px) {
   .header {
-    flex-direction: column;
-    align-items: flex-start;
+    display: flex;                
+    justify-content: center;      
+    align-items: center;  
   }
 
   /* .nav-links {
@@ -133,10 +133,6 @@ body {
 
 @media (max-width: 480px) {
 
-  .header {
-    padding: 0.5rem 0;
-  }
-
   /* .nav-links {
     flex-direction: column;
     gap: 0.5rem;
@@ -154,5 +150,19 @@ body {
   #insta-media {
     width: 75%;
     display: inline;
+  }
+
+  /* .nav-name {
+    margin-bottom: 30px;
+    width: 250px;
+    align-content: center;
+    justify-content: center;
+    flex-direction: row;
+  } */
+
+  .header {
+    display: flex;                
+    justify-content: center;      
+    align-items: center;  
   }
 }
